<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/topAppBar"
        android:title="@string/search_title"
        app:navigationIcon="@drawable/ic_arrow_back_24"
        style="@style/Widget.Material3.Toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_margin="16dp"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
        app:startIconDrawable="@android:drawable/ic_menu_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtQuery"
            android:hint="@string/search_hint"
            android:imeOptions="actionSearch"
            android:inputType="text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_marginHorizontal="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnDate"
            style="@style/Widget.Material3.Button.OutlinedButton"
            android:layout_weight="1"
            android:text="@string/date_any"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
        <Space android:layout_width="8dp" android:layout_height="0dp" />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnFilter"
            style="@style/Widget.Material3.Button.OutlinedButton"
            android:layout_weight="1"
            android:text="@string/filters"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_margin="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnClear"
            style="@style/Widget.Material3.Button.OutlinedButton"
            android:layout_weight="1"
            android:text="@string/clear_query"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
        <Space android:layout_width="8dp" android:layout_height="0dp" />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnApply"
            style="@style/Widget.Material3.Button"
            android:layout_weight="1"
            android:text="@string/apply_now"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
    </LinearLayout>
</LinearLayout>
